# better-rwkv

./: README.md  pyproject.toml
rwkv/: binidx.py  dataset.py  old_model.py
rwkv/model/: l2.py  rwkv6.py
rwkv/model/rwkv6/: __init__.py  channel_mixing.py  module.py  time_mixing.py
rwkv6/: trainer.py  utils.py
